
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct vfsconf_withpad {char* name; int flags; int refcount; int typenum; int pad1; } ;
typedef int name ;
typedef int conf ;


 int CTL_VFS ;
 int VFS_CONF ;
 int VFS_GENERIC ;
 int err (int,char*) ;
 int errx (int,char*) ;
 int printf (char*,char*,int ,int ,int ,int ) ;
 scalar_t__ sysctl (int*,int,struct vfsconf_withpad*,size_t*,int *,int ) ;

int main(void) {
  int name[] = { CTL_VFS, VFS_GENERIC, VFS_CONF, 0x17 };
  static struct vfsconf_withpad conf;
  size_t outlen = sizeof(conf);
  if (sysctl(name, sizeof(name)/sizeof(name[0]), &conf, &outlen, ((void*)0), 0))
    err(1, "sysctl");
  if (outlen != sizeof(conf))
    errx(1, "outlen != sizeof(conf)");
  printf("name=%.15s pad1=0x%02hhx typenum=%d refcount=%d flags=%d\n",
      conf.name, conf.pad1, conf.typenum, conf.refcount, conf.flags);
}
